--- a/index.html
+++ b/index.html
@@ -16,23 +16,25 @@
 
 <body>
     <!-- Preloader -->
-<div id="preloader" class="fade-out">
-  <img src="images/Letter_B.webp" alt="Loading...">
-</div>
-<!-- Animated Background -->
-<div class="background-animated">
-  <img src="images/Letter_B.webp" class="My-Name" style="left: 10%; animation-delay: 0s; animation-duration: 30s;">
-  <img src="images/Letter_E.jpg" class="My-Name" style="left: 30%; animation-delay: 3s; animation-duration: 32s;">
-  <img src="images/Letter_L.png" class="My-Name" style="left: 50%; animation-delay: 6s; animation-duration: 35s;">
-  <img src="images/Letter_L.png" class="My-Name" style="left: 70%; animation-delay: 1.5s; animation-duration: 31s;">
-  <img src="images/Letter_A.png" class="My-Name" style="left: 85%; animation-delay: 2s; animation-duration: 34s;">
-</div>
+    <div id="preloader" class="fade-out">
+        <img src="images/Letter_B.webp" alt="Loading...">
+    </div>
+    <!-- Animated Background -->
+    <div class="background-animated">
+        <img src="images/Letter_B.webp" class="My-Name"
+            style="left: 10%; animation-delay: 0s; animation-duration: 30s;">
+        <img src="images/Letter_E.jpg" class="My-Name" style="left: 30%; animation-delay: 3s; animation-duration: 32s;">
+        <img src="images/Letter_L.png" class="My-Name" style="left: 50%; animation-delay: 6s; animation-duration: 35s;">
+        <img src="images/Letter_L.png" class="My-Name"
+            style="left: 70%; animation-delay: 1.5s; animation-duration: 31s;">
+        <img src="images/Letter_A.png" class="My-Name" style="left: 85%; animation-delay: 2s; animation-duration: 34s;">
+    </div>
     <div id="header">
         <div class="container">
             <nav>
                 <a href="#header">
-                <img src="images/logo4.png" class="logo">
-            </a>
+                    <img src="images/logo4.png" class="logo">
+                </a>
                 <ul id="sidemenu">
                     <li><a href='#header'>Home</a> </li>
                     <li><a href='#about'>About</a> </li>
@@ -61,12 +63,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
-                    <p>I currently hold an Advanced Diploma In Information Technology(2024) majored in Software Development, 
-                        Web Development and Business Analysis during my diploma(2023). Skilled mainly in Web Development using 
-                        HTML, CSS and JavaScript. Earned hands-on experience through a prestigious job shadowing as a TechnoGirl 
-                        at Roche, South Africa. Known for a proactive mindset, exceptional problem-solving abilities, and a 
-                        commitment to personal and professional growth. Eager to contribute to innovative projects and thrive in 
-                        dynamic environments.</p>
+                    <p>Recent Advanced Diploma graduate in Information Technology with a solid foundation in software
+                        development, web technologies, and IT systems, currently advancing skills in cybersecurity and
+                        technology risk. Gained early exposure to corporate IT environments through a TechnoGirl job
+                        shadowing experience at Roche, South Africa. Seeking an entry-level role or graduate opportunity
+                        where I can apply analytical thinking, problem-solving, and technical knowledge to support
+                        secure, efficient, and innovative digital environments while continuing to grow professionally.
+                    </p>
 
                     <div class="tab-titles">
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
@@ -86,14 +89,18 @@
                     </div>
                     <div class="tab-contents" id="Education">
                         <ul>
+                            <li><span>2026 - 2026</span><br>
+                                <h4>Vaal University Of Technology</h4>
+                            </li>
+                            <h6>Post Graduate Diploma: Information Technology</h6>
                             <li><span>2024 - 2024</span><br>
                                 <h4>Vaal University Of Technology</h4>
                             </li>
-                            <h6>Advanced Diploma In Information Technology</h6>
+                            <h6>Advanced Diploma: Information Technology</h6>
                             <li><span>2021 - 2023</span><br>
                                 <h4>Vaal University Of Technology</h4>
                             </li>
-                            <h6>Diploma In Information Technology</h6>
+                            <h6>Diploma: Information Technology</h6>
                             <li><span>2016 - 2020</span><br>
                                 <h4>Umqhele Comprehensive School</h4>
                             </li>
@@ -106,98 +113,104 @@
     </div>
     <!-----------------Skills----------------->
     <!-- Skills Section -->
-<section id="skills">
-    <div class="container">
-        <h1 class="sub-title">My Skills & Certifications</h1>
-        <div class="skills-list">
-            <div class="skill-card">
-                <img src="images/html.avif" alt="HTML">
-                <h3>HTML</h3>
-                <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd" target="_blank">View Certificate</a>
-            </div>
+    <section id="skills">
+        <div class="container">
+            <h1 class="sub-title">My Skills & Certifications</h1>
+            <div class="skills-list">
+                <div class="skill-card">
+                    <img src="images/html.avif" alt="HTML">
+                    <h3>HTML</h3>
+                    <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd"
+                        target="_blank">View Certificate</a>
+                </div>
 
-            <div class="skill-card">
-                <img src="images/css.jpg" alt="CSS">
-                <h3>CSS</h3>
-                <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd" target="_blank">View Certificate</a>
-            </div>
+                <div class="skill-card">
+                    <img src="images/css.jpg" alt="CSS">
+                    <h3>CSS</h3>
+                    <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd"
+                        target="_blank">View Certificate</a>
+                </div>
 
-            <div class="skill-card">
-                <img src="images/javascript.jpg" alt="JavaScript">
-                <h3>JavaScript</h3>
-                <a href="https://www.credly.com/badges/34970806-6e50-4cf3-bebf-936eb7536e1f/academic_transcript" target="_blank">View Certificate</a>
-            </div>
+                <div class="skill-card">
+                    <img src="images/javascript.jpg" alt="JavaScript">
+                    <h3>JavaScript</h3>
+                    <a href="https://www.credly.com/badges/34970806-6e50-4cf3-bebf-936eb7536e1f/academic_transcript"
+                        target="_blank">View Certificate</a>
+                </div>
 
-            <div class="skill-card">
-                <img src="images/ChatBot.png" alt="AWS Security">
-                <h3>AWS Security</h3>
-                <a href="https://www.credly.com/badges/a6152ef2-2520-4265-994a-e042035d7f83/academic_transcript" target="_blank">View Certificate</a>
+                <div class="skill-card">
+                    <img src="images/ChatBot.png" alt="AWS Security">
+                    <h3>AWS Security</h3>
+                    <a href="https://www.credly.com/badges/a6152ef2-2520-4265-994a-e042035d7f83/academic_transcript"
+                        target="_blank">View Certificate</a>
+                </div>
+            </div>
+            <div class="view-transcript">
+                <a href="images/academic_transcript20250811-31-qm361i.pdf" target="_blank" class="btn">View Full
+                    Transcript</a>
             </div>
         </div>
-        <div class="view-transcript">
-            <a href="images/academic_transcript20250811-31-qm361i.pdf" target="_blank" class="btn">View Full Transcript</a>
-        </div>
-    </div>
-</section>
-<!----------------projects------------>
-        <div id="projects">
-            <div class="container">
-                <h1 class="sub-title">My Work</h1>
-                <div class="work-list">
-                    <div class="work">
-                        <img src="images/Coursera-Portfolio.png">
-                        <div class="layer">
-                            <h3>Coursera Portfolio</h3>
-                            <p>This is the first ever portfolio I did on Coursera before completing the Web Dev course.
-                            </p>
-                            <a href="https://github.com/Isamonyeseala/Coursera-Portfolio" target="_blank">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                        </div>
+    </section>
+    <!----------------projects------------>
+    <div id="projects">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="images/Coursera-Portfolio.png">
+                    <div class="layer">
+                        <h3>Coursera Portfolio</h3>
+                        <p>This is the first ever portfolio I did on Coursera before completing the Web Dev course.
+                        </p>
+                        <a href="https://github.com/Isamonyeseala/Coursera-Portfolio" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                        </a>
                     </div>
+                </div>
 
-                    <div class="work">
-                        <img src="images/clubbraids.png">
-                        <div class="layer">
-                            <h3>ClubBraids by Theo</h3>
-                            <p>A school project I did with 4 members. It offers professional braiding services.</p>
-                            <a href="https://durksie.github.io/UXD-PROJECT/index.html" target="_blank">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                        </div>
+                <div class="work">
+                    <img src="images/clubbraids.png">
+                    <div class="layer">
+                        <h3>ClubBraids by Theo</h3>
+                        <p>A school project I did with 4 members. It offers professional braiding services.</p>
+                        <a href="https://durksie.github.io/UXD-PROJECT/index.html" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                        </a>
                     </div>
+                </div>
 
-                    <div class="work">
-                        <img src="images/personal_portfolio.png">
-                        <div class="layer">
-                            <h3>My Portfolio (This Page)</h3>
-                            <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
-                            <a href="https://github.com/Isamonyeseala/Isabella-s-Personal-Portfolio" target="_blank">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                        </div>
+                <div class="work">
+                    <img src="images/personal_portfolio.png">
+                    <div class="layer">
+                        <h3>My Portfolio (This Page)</h3>
+                        <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
+                        <a href="https://github.com/Isamonyeseala/Isabella-s-Personal-Portfolio" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                        </a>
                     </div>
-                    <div class="work">
-                        <img src="images/ToDoList.jpg">
-                        <div class="layer">
-                            <h3>To-Do List</h3>
-                            <p>A simple task management web app built with Node.js, Express, MongoDB, and EJS. It
-                                categorizes tasks using the Eisenhower Matrix for better productivity.</p>
-                            <a href="https://todolist-1-7lje.onrender.com/" target="_blank">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                        </div>
+                </div>
+                <div class="work">
+                    <img src="images/ToDoList.jpg">
+                    <div class="layer">
+                        <h3>To-Do List</h3>
+                        <p>A simple task management web app built with Node.js, Express, MongoDB, and EJS. It
+                            categorizes tasks using the Eisenhower Matrix for better productivity.</p>
+                        <a href="https://todolist-1-7lje.onrender.com/" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                        </a>
                     </div>
-                    <div class="work">
-                        <img src="images/Movie-App.png">
-                        <div class="layer">
-                            <h3>Movie Database</h3>
-                            <p>This is a movie database system that was a group project. Created using Javascript, HTML and CSS.</p>
-                            <a href="https://bank-management-system-z5b3.onrender.com/" target="_blank">
-                                <i class="fa-solid fa-link"></i>
-                            </a>
-                        </div>
+                </div>
+                <div class="work">
+                    <img src="images/Movie-App.png">
+                    <div class="layer">
+                        <h3>Movie Database</h3>
+                        <p>This is a movie database system that was a group project. Created using Javascript, HTML and
+                            CSS.</p>
+                        <a href="https://bank-management-system-z5b3.onrender.com/" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                        </a>
                     </div>
+                </div>
             </div>
         </div>
 
